--- a/app/src/main/res/layout/fragment_kurumlar.xml
+++ b/app/src/main/res/layout/fragment_kurumlar.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal|center_vertical"
-    android:orientation="vertical"
-    tools:context=".activity.KurumlarActivity">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView2"
@@ -22,7 +21,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:onClick="makePhone"
         app:srcCompat="@android:drawable/ic_menu_call" />
 
     <TextView
@@ -38,7 +36,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:onClick="goLocation"
         app:srcCompat="@drawable/ic_location_on_black_24dp" />
 
     <TextView
@@ -48,13 +45,6 @@
         android:layout_marginBottom="30dp"
         android:gravity="center_horizontal"
         android:text="Yenişehir Mahallesi Lise Caddesi" />
-
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginBottom="10dp"
-        android:background="?android:attr/listDivider" />
 
     <TextView
         android:id="@+id/textView5"
@@ -70,7 +60,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:onClick="makePhone"
         app:srcCompat="@android:drawable/ic_menu_call" />
 
     <TextView
@@ -86,7 +75,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:onClick="goLocation"
         app:srcCompat="@drawable/ic_location_on_black_24dp" />
 
     <TextView
@@ -95,4 +83,11 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:text="Yenişehir Mahallesi, 21100  YeniŞehir" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginBottom="10dp"
+        android:background="?android:attr/listDivider" />
 </LinearLayout>
