--- a/app/src/main/res/layout/fragment_kurumlar.xml
+++ b/app/src/main/res/layout/fragment_kurumlar.xml
@@ -7,87 +7,12 @@
     android:gravity="center_horizontal|center_vertical"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView2"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/kurumRecycleView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:gravity="center_horizontal"
-        android:text="DİYARBAKIR VALİLİĞİ"
-        android:textSize="24sp" />
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:background="#2196F3">
 
-    <ImageView
-        android:id="@+id/valiPhoneIV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        app:srcCompat="@android:drawable/ic_menu_call" />
-
-    <TextView
-        android:id="@+id/valiPhoneTV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:gravity="center_horizontal"
-        android:text="04122802000" />
-
-    <ImageView
-        android:id="@+id/valiLocationIV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        app:srcCompat="@drawable/ic_location_on_black_24dp" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:gravity="center_horizontal"
-        android:text="Yenişehir Mahallesi Lise Caddesi" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:gravity="center_horizontal"
-        android:text="DİYARBAKIR BÜYÜKŞEHİR BELEDİYESİ"
-        android:textSize="24sp" />
-
-    <ImageView
-        android:id="@+id/belediyePhoneIV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        app:srcCompat="@android:drawable/ic_menu_call" />
-
-    <TextView
-        android:id="@+id/belediyePhoneTV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:gravity="center_horizontal"
-        android:text="04122294880" />
-
-    <ImageView
-        android:id="@+id/belediyeLocationIV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        app:srcCompat="@drawable/ic_location_on_black_24dp" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="Yenişehir Mahallesi, 21100  YeniŞehir" />
-
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginBottom="10dp"
-        android:background="?android:attr/listDivider" />
+    </androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
